# wawa

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  PKGBUILD  README.md  gnome-backend.c  stbi_alloc.h  wawa.c  wawa.h
sail/: CMakeLists.txt  vcpkg.json
sail/.github/workflows/: build-and-test.yml  build-python-wheels.yml
sail/cmake/: sail_find_swscale.cmake  sail_test.cmake  sail_windows_set_crt.cmake
sail/src/bindings/sail-c++/: CMakeLists.txt  io_memory.h
sail/src/bindings/sail-python/: CMakeLists.txt
sail/src/bindings/sail-python/src/: image_bindings.cpp
sail/src/bindings/sail-python/tests/: test_loading_api.py
sail/src/sail/: CMakeLists.txt  io_noop.c
sail/src/sail-codecs/: CMakeLists.txt
sail/src/sail-codecs-archive/: CMakeLists.txt
sail/src/sail-codecs-archive/pkgconfig/: sail-codecs.pc.in
sail/src/sail-codecs/bmp/: bmp.codec.info.in
sail/src/sail-codecs/jpegxl/: CMakeLists.txt
sail/src/sail-codecs/psd/: psd.codec.info.in
sail/src/sail-codecs/tga/: tga.codec.info.in
sail/src/sail-codecs/video/: CMakeLists.txt
sail/src/sail-codecs/webp/: webp.c  webp.codec.info.in
sail/src/sail-codecs/xbm/: xbm.codec.info.in
sail/src/sail-codecs/xwd/: xwd.codec.info.in
sail/src/sail-common/: CMakeLists.txt
sail/src/sail-manip/: CMakeLists.txt  scale_swscale.c  swscale_conversions.c
sail/src/sail/pkgconfig/: sail.pc.in
sail/tests/bindings/c++/: image.cpp
sail/tests/images/bugs/: test-images.h.in
